Make sure coverlayer covers all the viewport

--- a/style.css
+++ b/style.css
@@ -133,10 +133,10 @@ body {
     background-color: #000;
     display: block;
     opacity: 0.5;
-    height: 100%;
+    height: 100vh;
     left: 0;
     top: 0;
-    width: 100%;
+    width: 100vw;
     z-index: 2;
 
    -webkit-transition: opacity 1s;
